Actualizado con lo que me pasó Miguel Ángel
- Mejorada la interfaz

--- a/Web/principal.html
+++ b/Web/principal.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Obras</title>
+
+<title>Principal</title>
 <link href="principal.css" rel="stylesheet" type="text/css" />
 </head>
+<body>
 <!-- en php posteriormente -->
 	<div id="capacontenedora">
     	<div id="capatitulo">El teatro cool</div>
@@ -13,22 +15,10 @@
     			<li></li>
     			<li></li>
     			<li></li>
-    			<li><a href="principal.html">principal</a></li>
+    			<li><a href="obras.html">obras</a></li>
     		</ul>
     	</div>
-        <div id="capacontenedoraobrasquery">
-        	<a href="/?=query">
-		<!-- query dentro de capa (cada obra)-->
-				<div id="capaobraindividual">
-        			<div>
-        				<img id="imagenobraquery"/>
-        			</div>
-        			<div>
-						<p>descripcion</p>        
-        			</div>
-            	</div>
-            </a>
-		</div>
-<body>
+        <div id="capadetalles">detalles de introduccion</div>
+	</div>
 </body>
 </html>
