--- a/Web/obraIndependiente.html
+++ b/Web/obraIndependiente.html
@@ -3,23 +3,54 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Obra Individual</title>
-<link href="principal.css" rel="stylesheet" type="text/css" />
+<link href="../css/principal.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div id="capacontenedora">
+	<div id="capacontenedora">
     	<div id="capatitulo">El teatro cool</div>
-    	<div id="capamenu">menu here
-    		<ul>
-    			<li></li>
-    			<li></li>
-    			<li></li>
-    			<li><a href="obras.html">obras</a></li>
-    		</ul>
-    	</div> 
+    	<header>
+        <div class="contenedor" id="uno">
+			<img class="icon" src="../imagenes/icon5.png">
+			<p class="texto">home</p>
+		</div>
+        <div class="contenedor" id="dos">
+			<img class="icon" src="../imagenes/icon5.png">
+			<p class="texto">home</p>
+		</div>
+        <div class="contenedor" id="tres">
+			<img class="icon" src="../imagenes/icon5.png">
+			<p class="texto">home</p>
+		</div>
+        <div class="contenedor" id="cuatro">
+			<img class="icon" src="../imagenes/icon5.png">
+			<p class="texto">home</p>
+		</div>
+        <div class="contenedor" id="cinco">
+			<img class="icon" src="../imagenes/icon5.png">
+			<p class="texto">home</p>
+		</div>
+        </header>
         <div id="contenedoraCapaCalendario">
-        <div id="capacalendario">   
-        </div>          	
-        <!--<div id="capadetalles2">Butacas</div>-->  
+        <!-- butacas here -->
+        	<div id="capaobras">
+            </div>
+        	<div id="capacalendarioyhora">               
+        		<div id="capafechas">
+        		<form>
+            	<input type="text" />
+            	</form>
+                </div>
+        		<div id="capahoras">
+        		<form>
+            	<input type="text" />
+            	</form>
+                </div> 
+                <div id="capabutton">
+        		<form>
+            	<input type="submit" />
+            	</form>
+                </div>         		       	      
+        	</div>          	         
         </div>     
 	</div>
 </body>
