--- a/Web/html/obras.html
+++ b/Web/html/obras.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Obras</title>
-<link href="principal.css" rel="stylesheet" type="text/css" />
+<link href="../Stylesheet/principal.css" rel="stylesheet" type="text/css" />
 </head>
 <!-- en php posteriormente -->
 	<div id="capacontenedora">
