--- a/Web/index.html
+++ b/Web/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>Principal</title>
-<link href="principal.css" rel="stylesheet" type="text/css" />
+<link href="Stylesheet/principal.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <!-- en php posteriormente -->
